# cgal

Heat_method_3/examples/Heat_method_3/: CMakeLists.txt  heat_method.cpp  heat_method_bug.cpp
Heat_method_3/include/CGAL/Heat_method_3/internal/: Intrinsic_Delaunay_triangulation_3.h
Installation/: CHANGES.md
Isosurfacing_3/examples/Isosurfacing_3/: CMakeLists.txt
Lab/demo/Lab/Plugins/Mesh_3/: Mesh_3_plugin_cgal_code.cpp  Mesh_function.h
Mesh_3/doc/Mesh_3/: examples.txt
Mesh_3/examples/Mesh_3/: CMakeLists.txt  mesh_3D_image.cpp  mesh_polyhedral_domain.cpp
Mesh_3/include/CGAL/: Mesh_cell_criteria_3.h  Mesh_complex_3_in_triangulation_3.h  Mesh_criteria_3.h  Mesh_facet_criteria_3.h  Polyhedral_complex_mesh_domain_3.h  refine_mesh_3.h
Mesh_3/include/CGAL/IO/: File_medit.h
Mesh_3/include/CGAL/Mesh_3/: C3T3_helpers.h  Mesh_complex_3_in_triangulation_3_base.h  Mesh_global_optimizer.h  config.h  generate_label_weights.h  lfs.h  mesh_standard_cell_criteria.h  mesh_standard_facet_criteria.h  polylines_to_protect.h  sizing.h  tet_soup_to_c3t3.h  vertex_perturbation.h
Mesh_3/include/CGAL/Mesh_3/experimental/: Sizing_field_with_aabb_tree.h
Periodic_3_mesh_3/include/CGAL/: refine_periodic_3_mesh_3.h
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/: detect_features.h
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/internal/Isotropic_remeshing/: Sizing_field.h  Uniform_sizing_field.h
Polyhedron/demo/Polyhedron/: C3t3_type.h  Scene_polylines_item.cpp  Scene_polylines_item.h  Scene_triangulation_3_item.cpp
Polyhedron/demo/Polyhedron/Plugins/PMP/: Isotropic_remeshing_plugin.cpp
Polyhedron/demo/Polyhedron/Plugins/Tetrahedral_remeshing/: Tetrahedral_remeshing_plugin.cpp
SMDS_3/include/CGAL/SMDS_3/: tet_soup_to_c3t3.h
Scripts/developer_scripts/: autotest_cgal_with_ctest
TDS_3/include/CGAL/: Triangulation_data_structure_3.h
Tetrahedral_remeshing/examples/Tetrahedral_remeshing/: CMakeLists.txt  mesh_and_remesh_polyhedral_domain_with_features.cpp  tetrahedral_remeshing_generate_input.h
Tetrahedral_remeshing/include/CGAL/: tetrahedral_remeshing.h
Tetrahedral_remeshing/include/CGAL/Tetrahedral_remeshing/: Remeshing_triangulation_3.h
Tetrahedral_remeshing/include/CGAL/Tetrahedral_remeshing/internal/: FMLS.h  collapse_short_edges.h  flip_edges.h  smooth_vertices.h  split_long_edges.h  tetrahedral_adaptive_remeshing_impl.h  tetrahedral_remeshing_helpers.h
Tetrahedral_remeshing/test/Tetrahedral_remeshing/: CMakeLists.txt  test_tetrahedral_remeshing.cpp  test_tetrahedral_remeshing_io.cpp  test_tetrahedral_remeshing_of_one_subdomain.cpp  test_tetrahedral_remeshing_with_features.cpp
Tetrahedral_remeshing/test/Tetrahedral_remeshing/data/: issue4808.ascii.cgal  issue4808output.binary.cgal  sphere_in_cube.tr.cgal  triangulation_two_subdomains.binary.cgal
Triangulation_3/include/CGAL/: Regular_triangulation_3.h  Triangulation_3.h
